# pma

./: .gitignore  README.md  components.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: main.yml
convex/: biometrics.ts  convex.config.ts  convex.json  courtAppearances.ts  healthCheck.ts  inmate.ts  inmateVisits.ts  misc.ts  offenses.ts  officerMisc.ts  officers.ts  prisons.ts  recordMovements.ts  relations.ts  schema.ts  tsconfig.json
convex/_generated/: api.d.ts
src/: routeTree.gen.ts  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: taskbar-app.tsx
src/components/management-forms/: biometrics-panel.tsx  court-appearances-form.tsx  court-form.tsx  form-fields.tsx  index.ts  inmate-form.tsx  movement-form.tsx  offense-form.tsx  officer-form.tsx  prison-form.tsx  relation-select.tsx  sheet-application.tsx  visitor-form.tsx
src/components/management-provider/: app-sidebar.tsx  types.ts
src/components/theme-provider/: index.ts  provider.tsx  useThemeSwitcher.tsx
src/components/ui/: accordion.tsx  badge.tsx  calendar.tsx  chart.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  field.tsx  input-group.tsx  input.tsx  item.tsx  label.tsx  popover.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  sonner.tsx  table.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
src/hooks/: use-table.ts
src/integrations/convex/: provider.tsx
src/lib/: exportInmatesPDF.tsx  pdf-generator.ts  useIsTauri.ts
src/routes/: __root.tsx
src/routes/_management/: index.tsx  route.tsx
src/routes/_management/courts/: index.tsx
src/routes/_management/documentations/: index.tsx
src/routes/_management/inmates/: index.tsx
src/routes/_management/movements/: index.tsx
src/routes/_management/offenses/: index.tsx
src/styles/: globals.css
src/types/: inmate.ts
(+5 files in other folders)
