[package]
name = "pma"
version = "0.1.0"
description = "Prison Management Application"
authors = ["pherus"]
edition = "2021"

[lib]
name = "pma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
